--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "blog",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "blog/",
+  "private": true,  
   "scripts": {
     "dev": "next dev",
+    "export": "next export",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
